SAK-8962 various serious issues identified by PMD
git-svn-id: https://source.sakaiproject.org/svn/polls/trunk@66331 66ffb92e-73f9-0310-93c1-f5514f145a0a